package msg;

message ResourceLocator
{
    optional string resource = 1;
    optional string address = 2;
}

message ResourceTable
{
    repeated ResourceLocator urls = 1;
    optional uint32 version = 2;
    optional uint32 checksum = 3;
}

message GetTableRequest
{
    optional string requesting_node_name = 1;
    optional string requesting_node_addr = 2;
}

message GetTableResponse
{
    optional string sender_name = 1;
    optional ResourceTable resource_table = 2;
}

message SetTableRequest
{
    optional string requesting_node_name = 1;
    optional string requesting_node_addr = 2;
    optional ResourceTable resource_table = 3;
}

message SetTableResponse
{
    optional uint32 version = 1;
    optional uint32 checksum = 2;
}
 
message DeleteFromTableRequest
{
    optional string requesting_node_name = 1;
    optional string requesting_node_addr = 2;
    repeated ResourceLocator urls_to_delete = 3;
}

message DeleteFromTableResponse
{
}

message HeartbeatRequest
{
    optional uint32 version = 1;
    optional uint32 checksum = 2;
}

message HeartbeatResponse
{
    optional uint32 version = 1;
    optional uint32 checksum = 2;
    optional ResourceTable resource_table = 3;
}

message Bool
{
    optional bool val = 1;
}

message String {
  optional string value = 1;
}

message Int {
  optional int32 value = 1;
}

message Void {
}


